--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <title>TEST BAHASA KOREA</title>
 <style>
 body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
-
 /* LOGIN PAGE DENGAN ANIMASI */
 #login-page{
  min-height:100vh;
@@ -17,31 +16,27 @@ body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
  background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
  url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
 }
-
 /* ANIMASI MASUK HALUS */
 @keyframes fadeSlideUp {
   from { opacity: 0; transform: translateY(40px); }
   to { opacity: 1; transform: translateY(0); }
 }
-
 .login-container{
  width:90%;
- max-width:300px;                 /* sedikit lebih lebar dari 280px */
- padding:45px 35px;               /* lebih lega */
+ max-width:300px;
+ padding:45px 35px;
  text-align:center;
  background:rgba(255,255,255,.12);
- backdrop-filter:blur(14px);      /* blur lebih halus */
+ backdrop-filter:blur(14px);
  border-radius:24px;
  box-shadow:0 12px 40px rgba(0,0,0,.5);
- animation: fadeSlideUp 0.9s ease-out forwards; /* animasi masuk keren */
+ animation: fadeSlideUp 0.9s ease-out forwards;
 }
-
 .login-container h1{
  color:#fff;font-size:30px;margin:0 0 8px 0;text-shadow:0 2px 6px rgba(0,0,0,.7);
 }
 .login-container h1:nth-of-type(2){font-size:26px;margin-bottom:22px;}
 .login-container p{color:#eee;font-size:16px;margin-bottom:32px;}
-
 input{
  width:100%;padding:15px;margin:14px 0;border:none;border-radius:14px;
  background:rgba(255,255,255,.18);color:#fff;font-size:16px;
@@ -50,14 +45,13 @@ input{
  transition:all 0.3s;
 }
 input::placeholder{
- color:rgba(255,255,255,.65);    /* lebih transparan & soft */
+ color:rgba(255,255,255,.65);
 }
 input:focus{
  outline:none;background:rgba(255,255,255,.35);
  box-shadow:0 0 20px rgba(255,107,157,.6);
  transform:scale(1.02);
 }
-
 button{
  width:100%;padding:16px;margin:16px 0 8px;border:none;border-radius:14px;
  background:#ff6b9d;color:#fff;font-weight:bold;font-size:17px;cursor:pointer;
@@ -75,7 +69,6 @@ button:hover{
  50%{box-shadow:0 12px 40px rgba(255,107,157,.9);}
  100%{box-shadow:0 6px 20px rgba(255,107,157,.5);}
 }
-
 /* COPYRIGHT */
 .copyright{
  margin-top:35px;
@@ -84,12 +77,23 @@ button:hover{
  text-shadow:0 1px 4px rgba(0,0,0,.8);
 }
 
-/* QUIZ & RESULT - TETAP SAMA PERSIS, TIDAK DIUBAH */
+/* QUIZ & RESULT */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
-.header-fixed{position:fixed;top:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px;z-index:1000}
-.timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
+.header-fixed{
+ position:fixed;top:0;width:100%;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:6px 12px;z-index:1000;box-sizing:border-box;
+}
+.timer,.submit-top{
+ padding:10px 20px;
+ text-align:center;
+ color:#fff;
+ font-weight:bold;
+ font-size:16px;
+ border-radius:0;
+ min-width:100px;
+}
 .timer{background:#4caf50}
 .submit-top{background:#f44336}
+
 .container{max-width:540px;margin:auto;height:calc(100vh - 140px);overflow:auto}
 .question-wrapper{display:none;margin-bottom:30px}
 .question-wrapper.active{display:block}
@@ -101,19 +105,30 @@ button:hover{
 .option-item input{display:none}
 .option-circle{width:28px;height:28px;border:1.5px solid #000;border-radius:50%;display:flex;align-items:center;justify-content:center;margin-right:10px}
 .option-item input:checked + .option-circle{background:#bbdefb}
-.nav-bottom{position:fixed;bottom:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px}
-.nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
+
+.nav-bottom{
+ position:fixed;bottom:0;width:100%;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:6px 12px;box-sizing:border-box;
+}
+.nav-bottom button{
+ padding:10px 20px;                /* EXACTLY SAMA dengan atas */
+ color:#fff;
+ border:none;
+ font-weight:bold;
+ font-size:16px;                   /* SAMA */
+ border-radius:0;                  /* SAMA */
+ min-width:100px;                  /* SAMA */
+}
 #prev{background:#2196f3}
 #next{background:#ff9800}
+
 #result-page{display:none;max-width:600px;margin:auto;padding:20px}
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
 .wrong-item{margin-top:15px;padding:12px;background:#ffebee;border-left:5px solid #f44336}
 .correct{color:green;font-weight:bold}
-.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer}
+.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer;border-radius:8px;}
 </style>
 </head>
 <body>
-
 <div id="login-page">
  <div class="login-container">
  <h1>LATIHAN SOAL</h1>
@@ -144,7 +159,6 @@ button:hover{
 </div>
 
 <script>
-// GANTI DENGAN URL WEB APP GOOGLE APPS SCRIPT YANG SAMA DENGAN /koka
 const SPREADSHEET_URL = "https://script.google.com/macros/s/AKfycbzwdfNflhqIyVWo8knAyB2nWtzlkbPiRHfMCJV_O_mxkZravDprrAhMNV3Qu75WFYgk0g/exec";
 
 document.addEventListener("DOMContentLoaded",()=>{
@@ -191,7 +205,6 @@ const kodeMapping={
 };
 
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
-
 let questions=[],answers=[],current=0,time=3000,interval;
 let currentUser="", currentKode="";
 
@@ -199,7 +212,6 @@ btnLogin.onclick=()=>{
  const u=document.getElementById("username").value.trim();
  const p=document.getElementById("password").value.trim();
  const k=document.getElementById("kode").value.trim().toUpperCase();
-
  if(validCredentials[u]===p && kodeMapping[k]){
   currentUser = u;
   currentKode = k;
@@ -244,17 +256,16 @@ function show(n){
  document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
  current=n;
 }
+
 document.getElementById("prev").onclick=()=>current>0&&show(current-1);
 document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
 
 submitTop.onclick=()=>{
  const kosong=answers.findIndex(a=>a===null);
  if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
-
  clearInterval(interval);
  quizPage.style.display="none";
  resultPage.style.display="block";
-
  let score=0,html="";
  questions.forEach((q,i)=>{
   const benar=q.answer;
@@ -266,10 +277,8 @@ submitTop.onclick=()=>{
    ${q.explanation||"-"}
   </div>`;
  });
-
  const totalQuestions = questions.length;
  const percent = Math.round((score / (totalQuestions * 4)) * 100);
-
  const dataToSend = {
   waktu: new Date().toLocaleString('id-ID', {timeZone: 'Asia/Jakarta'}),
   namaSiswa: currentUser || "Anonymous",
@@ -279,7 +288,6 @@ submitTop.onclick=()=>{
   latihanSoal: `${score}/${totalQuestions*4} (${percent}%)`,
   keterangan: html ? html.replace(/<[^>]+>/g,' ').trim() : "Semua benar! Perfect!"
  };
-
  fetch(SPREADSHEET_URL, {
   method: "POST",
   headers: { "Content-Type": "application/json" },
@@ -292,7 +300,6 @@ submitTop.onclick=()=>{
   const params = new URLSearchParams(dataToSend);
   window.open(SPREADSHEET_URL + "?" + params.toString(), "_blank");
  });
-
  resultBox.innerHTML=`
   <h2>Nilai: ${score}</h2>
   ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
@@ -305,9 +312,7 @@ function startTimer(){
   if(--time<0) submitTop.onclick();
  },1000);
 }
-
 });
 </script>
 </body>
 </html>
-
