--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
 }
 .login-container{
  width:90%;
- max-width:300px;
- padding:45px 35px;
+ max-width:320px;
+ padding:40px 30px;
  text-align:center;
  background:rgba(255,255,255,.12);
  backdrop-filter:blur(14px);
@@ -33,20 +33,18 @@ body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
  animation: fadeSlideUp 0.9s ease-out forwards;
 }
 .login-container h1{
- color:#fff;font-size:30px;margin:0 0 8px 0;text-shadow:0 2px 6px rgba(0,0,0,.7);
+ color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 6px rgba(0,0,0,.7);
 }
-.login-container h1:nth-of-type(2){font-size:26px;margin-bottom:22px;}
-.login-container p{color:#eee;font-size:16px;margin-bottom:32px;}
+.login-container h1:nth-of-type(2){font-size:24px;margin-bottom:20px;}
+.login-container p{color:#eee;font-size:15px;margin-bottom:30px;}
 input{
- width:100%;padding:15px;margin:14px 0;border:none;border-radius:14px;
+ width:100%;padding:16px;margin:12px 0;border:none;border-radius:14px;
  background:rgba(255,255,255,.18);color:#fff;font-size:16px;
  backdrop-filter:blur(4px);
  box-sizing:border-box;
  transition:all 0.3s;
 }
-input::placeholder{
- color:rgba(255,255,255,.65);
-}
+input::placeholder{color:rgba(255,255,255,.65);}
 input:focus{
  outline:none;background:rgba(255,255,255,.35);
  box-shadow:0 0 20px rgba(255,107,157,.6);
@@ -69,63 +67,121 @@ button:hover{
  50%{box-shadow:0 12px 40px rgba(255,107,157,.9);}
  100%{box-shadow:0 6px 20px rgba(255,107,157,.5);}
 }
-/* COPYRIGHT */
 .copyright{
  margin-top:35px;
  color:rgba(255,255,255,.8);
- font-size:14px;
+ font-size:13px;
  text-shadow:0 1px 4px rgba(0,0,0,.8);
 }
 
-/* QUIZ & RESULT */
-#quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
+/* QUIZ & RESULT - MOBILE FIRST */
+#quiz-page{display:none;min-height:100vh;padding:70px 0 80px;background:linear-gradient(#fdf6ec,#f7efe2)}
+
 .header-fixed{
- position:fixed;top:0;width:100%;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:6px 12px;z-index:1000;box-sizing:border-box;
+ position:fixed;
+ top:0;
+ left:0;
+ right:0;
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ background:#fff;
+ padding:10px 15px;
+ box-shadow:0 2px 10px rgba(0,0,0,0.1);
+ z-index:1000;
+ box-sizing:border-box;
 }
-.timer,.submit-top{
- padding:10px 20px;                /* padding horizontal lebih lebar biar enak dilihat */
+.timer, .submit-top{
+ padding:12px 24px;
  text-align:center;
  color:#fff;
  font-weight:bold;
  font-size:16px;
- border-radius:0;                  /* sudut tajam */
- min-width:100px;                  /* lebar minimum biar nggak terlalu kecil */
+ border-radius:0;
+ min-width:110px;
 }
 .timer{background:#4caf50}
 .submit-top{background:#f44336}
 
-.container{max-width:540px;margin:auto;height:calc(100vh - 140px);overflow:auto}
+.container{
+ max-width:540px;
+ margin:auto;
+ height:calc(100vh - 150px);
+ overflow-y:auto;
+ padding:0 15px;
+ box-sizing:border-box;
+}
+
 .question-wrapper{display:none;margin-bottom:30px}
 .question-wrapper.active{display:block}
-.box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb}
-.box-passage audio,.box-passage img{width:100%;margin-top:10px}
-.box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80}
-.options{margin-top:15px}
-.option-item{display:flex;align-items:flex-start;margin:12px 0}
+.box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb;border-radius:12px;}
+.box-passage audio,.box-passage img{width:100%;margin-top:15px;border-radius:8px;}
+.box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80;border-radius:12px;margin-top:15px;}
+.option-item{
+ display:flex;
+ align-items:center;
+ margin:15px 0;
+ font-size:16px;
+}
 .option-item input{display:none}
-.option-circle{width:28px;height:28px;border:1.5px solid #000;border-radius:50%;display:flex;align-items:center;justify-content:center;margin-right:10px}
-.option-item input:checked + .option-circle{background:#bbdefb}
+.option-circle{
+ width:32px;
+ height:32px;
+ border:2px solid #333;
+ border-radius:50%;
+ display:flex;
+ align-items:center;
+ justify-content:center;
+ margin-right:12px;
+ flex-shrink:0;
+ font-weight:bold;
+}
+.option-item input:checked + .option-circle{
+ background:#bbdefb;
+ border-color:#2196f3;
+}
 
 .nav-bottom{
- position:fixed;bottom:0;width:100%;display:flex;justify-content:space-between;align-items:center;background:#fff;padding:6px 12px;box-sizing:border-box;
+ position:fixed;
+ bottom:0;
+ left:0;
+ right:0;
+ display:flex;
+ justify-content:space-between;
+ align-items:center;
+ background:#fff;
+ padding:10px 15px;
+ box-shadow:0 -2px 10px rgba(0,0,0,0.1);
+ box-sizing:border-box;
 }
 .nav-bottom button{
- padding:10px 24px;                /* horizontal padding lebih lebar */
+ padding:12px 24px;                 /* PERSIS SAMA dengan atas */
+ text-align:center;
  color:#fff;
  border:none;
  font-weight:bold;
  font-size:16px;
- border-radius:0;                  /* sudut tajam */
- min-width:100px;
+ border-radius:0;
+ min-width:110px;                   /* PERSIS SAMA */
 }
 #prev{background:#2196f3}
 #next{background:#ff9800}
 
-#result-page{display:none;max-width:600px;margin:auto;padding:20px}
-.result-box{background:#fff;border:2px solid #ddd;padding:20px}
-.wrong-item{margin-top:15px;padding:12px;background:#ffebee;border-left:5px solid #f44336}
+#result-page{display:none;max-width:600px;margin:auto;padding:20px 15px;}
+.result-box{background:#fff;border:2px solid #ddd;padding:25px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.1);}
+.wrong-item{margin-top:20px;padding:15px;background:#ffebee;border-left:5px solid #f44336;border-radius:8px;}
 .correct{color:green;font-weight:bold}
-.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer;border-radius:8px;}
+.back-btn{
+ margin-top:30px;
+ padding:16px;
+ background:#3f51b5;
+ color:#fff;
+ text-align:center;
+ font-weight:bold;
+ font-size:17px;
+ border-radius:12px;
+ cursor:pointer;
+}
 </style>
 </head>
 <body>
