--- a/index.html
+++ b/index.html
@@ -112,15 +112,36 @@ button:hover{
  box-sizing:border-box;
 }
 
-.question-wrapper{display:none;margin-bottom:30px}
+.question-wrapper{
+ display:none;
+ margin-bottom:40px;
+}
 .question-wrapper.active{display:block}
-.box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb;border-radius:12px;}
-.box-passage audio,.box-passage img{width:100%;margin-top:15px;border-radius:8px;}
-.box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80;border-radius:12px;margin-top:15px;}
+
+/* GAMBAR & AUDIO: POLOS TANPA BACKGROUND, BORDER, ATAU RADIUS */
+.box-passage{
+ padding:0;
+ margin-bottom:20px;
+}
+.box-passage audio,
+.box-passage img{
+ width:100%;
+ margin-top:10px;
+ display:block;
+ border-radius:8px; /* tetap kasih sedikit radius biar gambar/audio kelihatan rapi */
+}
+
+/* SOAL & PILIHAN: BACKGROUND TETAP, TAPI HILANGKAN BORDER & RADIUS */
+.box-question{
+ background:#fff3e0;
+ padding:20px;
+ margin-top:15px;
+ /* Hilangkan border dan border-radius */
+}
 .option-item{
  display:flex;
  align-items:center;
- margin:15px 0;
+ margin:18px 0;
  font-size:16px;
 }
 .option-item input{display:none}
@@ -135,10 +156,12 @@ button:hover{
  margin-right:12px;
  flex-shrink:0;
  font-weight:bold;
+ font-size:15px;
 }
 .option-item input:checked + .option-circle{
  background:#bbdefb;
  border-color:#2196f3;
+ color:#2196f3;
 }
 
 .nav-bottom{
@@ -155,20 +178,20 @@ button:hover{
  box-sizing:border-box;
 }
 .nav-bottom button{
- padding:12px 24px;                 /* PERSIS SAMA dengan atas */
+ padding:12px 24px;
  text-align:center;
  color:#fff;
  border:none;
  font-weight:bold;
  font-size:16px;
  border-radius:0;
- min-width:110px;                   /* PERSIS SAMA */
+ min-width:110px;
 }
 #prev{background:#2196f3}
 #next{background:#ff9800}
 
 #result-page{display:none;max-width:600px;margin:auto;padding:20px 15px;}
-.result-box{background:#fff;border:2px solid #ddd;padding:25px;border-radius:12px;box-shadow:0 4px 15px rgba(0,0,0,0.1);}
+.result-box{background:#fff;padding:25px;box-shadow:0 4px 15px rgba(0,0,0,0.1);}
 .wrong-item{margin-top:20px;padding:15px;background:#ffebee;border-left:5px solid #f44336;border-radius:8px;}
 .correct{color:green;font-weight:bold}
 .back-btn{
