--- a/index.html
+++ b/index.html
@@ -279,6 +279,8 @@ const validCredentials={
  "user01":"12345",
  "hanarizka":"Nungkihana24!",
  "windi":"Windi2000",
+ "siwon":"kampus2"},
+ "yppsdi":"global2026"},
  "rismaya97":"bahasakorea",
  "sita77":"minyooki",
  "Aini185":"Doraemon",
@@ -429,3 +431,4 @@ function startTimer(){
 </script>
 </body>
 </html>
+
