--- a/index.html
+++ b/index.html
@@ -1,184 +1,317 @@
+
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login CBT UBT</title>
+<title>TEST BAHASA KOREA</title>
 <style>
-*{ box-sizing:border-box; font-family:Arial, Helvetica, sans-serif }
-body{ 
-  margin:0; 
-  height:100vh; 
-  display:flex; 
-  justify-content:center; 
-  align-items:center; 
-  background:linear-gradient(rgba(0,0,0,.35),rgba(0,0,0,.35)), 
-              url("https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg") center/cover no-repeat; 
+body{margin:0;font-family:'Segoe UI',Arial,sans-serif;background:#f5f5f5}
+
+/* LOGIN - STATIC, NO ANIMATION */
+#login-page{
+ min-height:100vh;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+ background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+ url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
+ /* Animasi fadeInPage dihilangkan */
 }
-/* ANIMASI MASUK LEBIH CEPAT & RINGAN */
-@keyframes fadeSlideUp {
-  from { opacity: 0; transform: translateY(30px); }
-  to { opacity: 1; transform: translateY(0); }
+
+.login-container{
+ width:90%;
+ max-width:280px;
+ padding:40px 30px;
+ text-align:center;
+ background:rgba(255,255,255,.09);
+ backdrop-filter:blur(12px);
+ border-radius:20px;
+ box-shadow:0 8px 32px rgba(0,0,0,.4);
+ /* Animasi slideUp dihilangkan */
 }
-.login-box{ 
-  width:340px; /* Tetap */
-  background:rgba(255,255,255,.28); 
-  padding:28px 24px; /* Dikurangi sedikit */
-  text-align:center; 
-  backdrop-filter:blur(8px); 
-  border-radius:10px; 
-  box-shadow:0 8px 28px rgba(0,0,0,.25); 
-  animation: fadeSlideUp 0.6s ease-out forwards; 
-  transition:transform .3s, box-shadow .3s;
+
+.login-container h1{
+ color:#fff;font-size:28px;margin:0 0 8px 0;text-shadow:0 2px 4px rgba(0,0,0,.7);
 }
-.login-box:hover {
-  transform:translateY(-4px);
-  box-shadow:0 12px 35px rgba(0,0,0,.3);
+.login-container h1:nth-of-type(2){font-size:24px;margin-bottom:20px;}
+.login-container p{color:#eee;font-size:16px;margin-bottom:30px;}
+
+input{
+ width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+ background:rgba(255,255,255,.15);color:#fff;font-size:16px;
+ backdrop-filter:blur(4px);
+ box-sizing:border-box;
+ transition:0.3s;
 }
-.login-box h2{ 
-  margin-bottom:18px; 
-  color:#fff; 
-  font-size:24px; 
-  text-shadow:0 1px 4px rgba(0,0,0,.6);
+input::placeholder{color:rgba(255,255,255,.7);}
+input:focus{
+ outline:none;background:rgba(255,255,255,.3);
+ box-shadow:0 0 15px rgba(255,107,157,.5);
 }
-input, select, button{ 
-  width:100%; 
-  padding:11px; /* Dikurangi sedikit */
-  margin-bottom:11px; 
-  font-size:14px; 
-  border-radius:6px; 
-  border:none; 
-  outline:none; 
+
+button{
+ width:100%;padding:14px;margin:12px 0;border:none;border-radius:12px;
+ background:#ff6b9d;color:#fff;font-weight:bold;font-size:16px;cursor:pointer;
+ box-shadow:0 4px 15px rgba(255,107,157,.4);
+ transition:0.4s;
+ box-sizing:border-box;
 }
-input, select {
-  background:rgba(255,255,255,.18);
-  color:#fff;
-  backdrop-filter:blur(4px);
-  transition:all .3s;
+button:hover{
+ background:#ff8ac1;transform:translateY(-3px) scale(1.03);
+ box-shadow:0 8px 25px rgba(255,107,157,.6);
+ animation: pulse 1.5s infinite;
 }
-input::placeholder, select::placeholder {
-  color:rgba(255,255,255,.45);
-  opacity:1;
+@keyframes pulse {
+  0%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
+  50%{box-shadow:0 8px 30px rgba(255,107,157,.8);}
+  100%{box-shadow:0 4px 15px rgba(255,107,157,.4);}
 }
-input:focus, select:focus{ 
-  background:rgba(255,255,255,.3);
-  box-shadow:0 0 0 2px #60a5fa; 
+
+/* COPYRIGHT - DIPINDAH KE LUAR BOX */
+.copyright{
+ margin-top:30px;
+ color:rgba(255,255,255,.7);
+ font-size:14px;
+ text-shadow:0 1px 3px rgba(0,0,0,.8);
 }
-button{ 
-  background:#1e3a8a; /* Navy premium */
-  color:#fff; 
-  cursor:pointer; 
-  font-weight:bold; 
-  transition:background .3s, transform .2s; 
-}
-button:hover{ 
-  background:#172554; /* Lebih gelap */
-  transform:translateY(-2px);
-  /* Hilangkan pulse biar lebih ramping */
-}
-#error-msg{ 
-  color:#ff6b6b; 
-  font-weight:bold; 
-  margin-top:8px; 
-  font-size:13px; 
-  min-height:20px; 
-}
-.copyright{ 
-  position:fixed; 
-  bottom:12px; 
-  width:100%; 
-  text-align:center; 
-  font-size:12px; 
-  color:rgba(255,255,255,0.85); 
-  letter-spacing:0.5px; 
-}
+
+/* QUIZ & RESULT - TETAP SAMA, TIDAK DIUBAH */
+#quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
+.header-fixed{position:fixed;top:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px;z-index:1000}
+.timer,.submit-top{flex:1;padding:12px 0;text-align:center;color:#fff;font-weight:bold}
+.timer{background:#4caf50}
+.submit-top{background:#f44336}
+.container{max-width:540px;margin:auto;height:calc(100vh - 140px);overflow:auto}
+.question-wrapper{display:none;margin-bottom:30px}
+.question-wrapper.active{display:block}
+.box-passage{background:#e3f2fd;padding:20px;border:2px solid #bbdefb}
+.box-passage audio,.box-passage img{width:100%;margin-top:10px}
+.box-question{background:#fff3e0;padding:20px;border:2px solid #ffcc80}
+.options{margin-top:15px}
+.option-item{display:flex;align-items:flex-start;margin:12px 0}
+.option-item input{display:none}
+.option-circle{width:28px;height:28px;border:1.5px solid #000;border-radius:50%;display:flex;align-items:center;justify-content:center;margin-right:10px}
+.option-item input:checked + .option-circle{background:#bbdefb}
+.nav-bottom{position:fixed;bottom:0;width:100%;display:flex;gap:6px;background:#fff;padding:6px}
+.nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
+#prev{background:#2196f3}
+#next{background:#ff9800}
+#result-page{display:none;max-width:600px;margin:auto;padding:20px}
+.result-box{background:#fff;border:2px solid #ddd;padding:20px}
+.wrong-item{margin-top:15px;padding:12px;background:#ffebee;border-left:5px solid #f44336}
+.correct{color:green;font-weight:bold}
+.back-btn{margin-top:20px;padding:14px;background:#3f51b5;color:#fff;text-align:center;cursor:pointer}
 </style>
 </head>
 <body>
- <div class="login-box">
-  <h2>LOGIN UBT</h2>
-  <input id="username" placeholder="Username / 이름" autofocus>
-  <input id="password" type="password" placeholder="Password / 비밀번호">
-  <select id="paket">
-   <option value="1">TRYOUT 01</option>
-   <option value="2">TRYOUT 02</option>
-   <option value="3">TRYOUT 03</option>
-  </select>
-  <button onclick="login()">LOGIN / 로그인</button>
-  <div id="error-msg"></div>
- </div>
- <div class="copyright">
-  © 2026 Denzuka - Kim Jongun. All Rights Reserved.
- </div>
 
- <script>
- const SPREADSHEET_URL = "https://script.google.com/macros/s/AKfycbyfCZ5YNQHDLyKWatqj-diL8tXRRwXBKfJaaYMqcqoShABYy4Gx6QpexPOB_MkZwpIwLw/exec";
+<div id="login-page">
+  <div class="login-container">
+    <h1>LATIHAN SOAL</h1>
+    <h1>한국어연습</h1>
+    <p>25 Soal | 50 Menit</p>
+    <input id="username" placeholder="Username / 이름">
+    <input id="password" type="password" placeholder="Password / 비밀번호">
+    <input id="kode" placeholder="Kode Soal / 시험코드">
+    <button id="btnLogin">LOGIN / 로그인</button>
+    <!-- Copyright dipindah ke luar -->
+  </div>
+  <div class="copyright">© 2026 Denzuka - Kim Jongun. All Rights Reserved.</div>
+</div>
 
- const users = [
-  {username:"uus",password:"111"},
-  {username:"windi",password:"Windi2000"},
-  {username:"rismaya97",password:"bahasakorea"},
-  {username:"sita77",password:"minyooki"},
-  {username:"Aini185",password:"Doraemon"},
-  {username:"Hangeulfei",password:"studykorea02"},
-  {username:"Hamdan106",password:"Fukuo106"},
-  {username:"Heri",password:"heri99"},
-  {username:"hanarizka",password:"Nungkihana24!"},
-  {username:"Fikrisurya",password:"464646"},
-  {username:"Mutiara2003",password:"Mutiara14"},
-  {username:"wantikas",password:"200022"},
-  {username:"Dininidia",password:"dininidia11"},
-  {username:"kaniarostayuni9",password:"Kania1313"},
-  {username:"Dikisetiawan07",password:"Diki2709"},
-  {username:"Aisyah18",password:"Aisyah18."},
-  {username:"Rizka2026",password:"butterfly24"},
-  {username:"Zhafif07",password:"20060722"},
-  {username:"siwon",password:"kampus2"},
-  {username:"yppsdi",password:"global2026"},
-  {username:"admin",password:"admin123",role:"admin"}
- ];
+<div id="quiz-page">
+  <div class="header-fixed">
+    <div class="submit-top" id="submitTop">SUBMIT</div>
+    <div class="timer" id="timer">50:00</div>
+  </div>
+  <div class="container"><form id="quiz-form"></form></div>
+  <div class="nav-bottom">
+    <button id="prev">PREV</button>
+    <button id="next">NEXT</button>
+  </div>
+</div>
 
- function checkStorage(){
-  try{ localStorage.setItem("test","ok"); localStorage.removeItem("test"); return true; }catch(e){ return false; }
+<div id="result-page">
+  <div class="result-box" id="resultBox"></div>
+</div>
+
+<script>
+// Script 100% original, tidak ada perubahan sama sekali
+document.addEventListener("DOMContentLoaded",()=>{
+const loginPage=document.getElementById("login-page");
+const quizPage=document.getElementById("quiz-page");
+const resultPage=document.getElementById("result-page");
+const btnLogin=document.getElementById("btnLogin");
+const submitTop=document.getElementById("submitTop");
+const quizForm=document.getElementById("quiz-form");
+const timerEl=document.getElementById("timer");
+const resultBox=document.getElementById("resultBox");
+
+const validCredentials={
+ "uus":"123",
+ "user01":"12345",
+ "hanarizka":"Nungkihana24!",
+ "windi","Windi2000",
+ "rismaya97","bahasakorea",
+ "sita77","minyooki",
+ "Aini185","Doraemon",
+ "Hangeulfei","studykorea02",
+ "Hamdan106","Fukuo106",
+ "Heri","heri99",
+	"hanarizka","Nungkihana24!",
+ "Fikrisurya","464646",
+ "Mutiara2003","Mutiara14",
+ "wantikas","200022",
+ "Dininidia","dininidia11",
+ "Hangeulfei","studykorea02",
+ "kaniarostayuni9","Kania1313",
+ "Dikisetiawan07","Diki2709",
+ "Aisyah18","Aisyah18.",
+ "Dininidia","dininidia11",
+ "Hangeulfei","studykorea02",
+ "Rizka2026","butterfly24",
+ "Zhafif07","20060722",
+ "Hangeulfei","studykorea02",
+ "Hamdan106","Fukuo106",
+ "Heri","heri99",
+ "user3":"12345",
+ "siswa01":"12345",
+ "windi":"Windi2000",
+ "rismaya97":"bahasakorea",
+ "admin":"admin123",
+ "Fikrisurya":"464646",
+ "Mutiara2003":"Mutiara14",
+ "sita77":"minyooki",
+ "Aini185":"Doraemon",
+ "Hangeulfei":"studykorea02",
+ "Hamdan106":"Fukuo106",
+ "koreafan":"hanguk789",
+ "topik2026":"seoul2026"
+};
+const kodeMapping={
+ "B12345":"soal1.json",
+ "A09008":"soal2.json",
+ "SAREWAE":"test.json",
+ "W11765":"soal3.json",
+ "H66633":"soal5.json"
+};
+const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+
+let questions=[],answers=[],current=0,time=3000,interval;
+let currentUser="", currentKode="";
+
+btnLogin.onclick=()=>{
+ const u=document.getElementById("username").value.trim();
+ const p=document.getElementById("password").value.trim();
+ const k=document.getElementById("kode").value.trim().toUpperCase();
+
+ if(validCredentials[u]===p && kodeMapping[k]){
+ currentUser = u;
+ currentKode = k;
+ loginPage.style.display="none";
+ quizPage.style.display="block";
+ loadSoal(kodeMapping[k]);
+ startTimer();
+ }else{
+ alert("Username / Password / Kode salah");
  }
+};
 
- function login(){
-  const err = document.getElementById("error-msg");
-  err.innerText = "";
-  if(!checkStorage()){ err.innerText = "Browser memblokir localStorage. Gunakan mode normal."; return; }
-  
-  const u = document.getElementById("username").value.trim();
-  const p = document.getElementById("password").value.trim();
-  const paket = document.getElementById("paket").value;
-  
-  if (!u || !p) { err.innerText = "Username & password wajib diisi!"; return; }
-
-  const user = users.find(x => x.username === u && x.password === p);
-  if(!user){ err.innerText = "Username atau password salah!"; return; }
-  
-  if(Number(paket) > 1){
-   const results = JSON.parse(localStorage.getItem("results") || "[]");
-   const prev = results.find(r => r.name === u && Number(r.paket) === Number(paket) - 1);
-   if(!prev || Number(prev.score) < 80){ 
-    err.innerText = "Harus lulus paket sebelumnya dengan nilai minimal 80"; 
-    return; 
-   }
-  }
-  
-  localStorage.setItem("login","true");
-  localStorage.setItem("user",u);
-  localStorage.setItem("paket",paket);
-  
-  if(user.role === "admin") {
-   location.href = "https://airnetcso.github.io/admin/";
-  } else {
-   location.href = "dashboard.html";
-  }
- }
-
- document.addEventListener("keypress", function(e) {
-  if (e.key === "Enter") login();
+async function loadSoal(file){
+ questions=await (await fetch(BASE+file)).json();
+ answers=Array(questions.length).fill(null);
+ quizForm.innerHTML="";
+ questions.forEach((q,i)=>{
+ quizForm.innerHTML+=`
+ <div class="question-wrapper">
+ <div class="box-passage">
+ ${q.audio?`<audio controls src="${q.audio}"></audio>`:""}
+ ${q.image?`<img src="${q.image}">`:""}
+ </div>
+ <div class="box-question">
+ <p><b>${i+1}.</b> ${q.question}</p>
+ ${Object.entries(q.options).map(([k,v],idx)=>`
+ <label class="option-item">
+ <input type="radio" name="q${i}" value="${k}">
+ <span class="option-circle">${idx+1}</span> ${v}
+ </label>`).join("")}
+ </div>
+ </div>`;
  });
- </script>
+ document.querySelectorAll("input[type=radio]").forEach(r=>{
+ r.onchange=()=>answers[+r.name.slice(1)]=r.value;
+ });
+ show(0);
+}
+
+function show(n){
+ document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
+ document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
+ current=n;
+}
+document.getElementById("prev").onclick=()=>current>0&&show(current-1);
+document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
+
+submitTop.onclick=()=>{
+ const kosong=answers.findIndex(a=>a===null);
+ if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
+
+ clearInterval(interval);
+ quizPage.style.display="none";
+ resultPage.style.display="block";
+
+ let score=0,html="";
+ questions.forEach((q,i)=>{
+ const benar=q.answer;
+ if(answers[i]===benar) score+=4;
+ else html+=`
+ <div class="wrong-item">
+ <b>Soal ${i+1} salah</b><br>
+ Jawaban benar: <span class="correct">${benar}</span><br>
+ ${q.explanation||"-"}
+ </div>`;
+ });
+
+ const resultData = {
+ username: currentUser,
+ kode: currentKode || "-",
+ nilai: score,
+ tanggal: new Date().toLocaleString('id-ID'),
+ app: "latbakor"
+ };
+
+ let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
+
+ const isDuplicate = allResults.some(r => 
+ r.username === resultData.username &&
+ r.kode === resultData.kode &&
+ r.nilai === resultData.nilai &&
+ r.app === resultData.app &&
+ Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
+ );
+
+ if (!isDuplicate) {
+ allResults.push(resultData);
+ localStorage.setItem("quizResults", JSON.stringify(allResults));
+ }
+
+ resultBox.innerHTML=`
+ <h2>Nilai: ${score}</h2>
+ ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
+ <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
+};
+
+function startTimer(){
+ interval=setInterval(()=>{
+ timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
+ if(--time<0) submitTop.onclick();
+ },1000);
+}
+
+});
+</script>
 </body>
 </html>
